--- a/AliOzkara/index.html
+++ b/AliOzkara/index.html
@@ -549,7 +549,7 @@
                         </div>
 
 
-                        <div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/images/15t2.jpg)">
+                        <div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/15t2.jpg)">
                             <div class="overlay"></div>
                             <div class="text text-center p-4">
                                 <h3><a href="https://15temmuzinfo.org/" target="_blank">15temmuzinfo.org</a></h3>
